--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 							</thead>
 						</table>
 					</div>
-					<div id="supplier_revise_page">
+					<div id="supplier_revise_page" style="display:none" >
 						<div class= "tab_form">
 							<div class="text_field">
 								<label for="part_supplier_in">廠商 :</label><input id="part_supplier_in" class="part_attr input_container supplier_list_style normal_font" name="part_supplier" list="supplier_list" onchange="supplier_change_btn( this.value )" />
