--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 							</thead>
 						</table>
 					</div>
-					<div id="supplier_revise_page" style="display:none" >
+					<div id="supplier_revise_page">
 						<div class= "tab_form">
 							<div class="text_field">
 								<label for="part_supplier_in">廠商 :</label><input id="part_supplier_in" class="part_attr input_container supplier_list_style normal_font" name="part_supplier" list="supplier_list" onchange="supplier_change_btn( this.value )" />
@@ -381,7 +381,9 @@
 		async function chenge_page_to_supplier( value ) {
 			$('.nav-tabs a[href="#menu7"]').tab('show');
 			supplier_revise_btn();
-			alert( $("#supplier_revise_page").style.display );
+			alert( $("#supplier_revise_page").is(":visible") ); 
+			alert( $("#supplier_revise_page").is(":hidden") ); 
+			
 		};
 		
 		// part number link to bom table
@@ -425,18 +427,14 @@
 		
 		// supplier revise button
 		function supplier_revise_btn(){
-			if ($("#supplier_revise_page").style.display === "none") {
-				$("#supplier_revise_page").style.display = "block";
-				$("#supplier_search_page").style.display = "none";
-			}
+			$("#supplier_search_page").hide();
+			$("#supplier_revise_page").show();
 		}
 		
 		// supplier search button
 		function supplier_search_btn(){
-			if ($("#supplier_search_page").style.display === "none") {
-				$("#supplier_search_page").style.display = "block";
-				$("#supplier_revise_page").style.display = "none";
-			}
+			$("#supplier_search_page").show();
+			$("#supplier_revise_page").hide();
 			receive_supplier_list();
 		}
 		
