--- a/index.html
+++ b/index.html
@@ -379,17 +379,9 @@
 		
 		// supplier name link to supplier table
 		async function chenge_page_to_supplier( value ) {
-			
-			var obj = $('.nav-tabs a[href="#menu7"]');
+			$('.nav-tabs a[href="#menu7"]').tab('show');
+			await time_delay(500);
 			var i = 0;
-			alert( obj.tab.is(":hidden") );
-			alert( obj.tab.is(":visible") );
-			while ( obj.tab.is(":hidden") && i<10){
-				obj.tab('show');
-				await time_delay(200);
-				i++
-			}
-			alert( i );
 			var obj = $("#supplier_revise_page");
 			i = 0;
 			while ( obj.is(":hidden") && i<10){
