--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@
 			var part_attr = cnt.getElementsByClassName("part_attr");
 			var attr;
 			var num_str = "";
-			if( partnum[0].value == "3" ){
+			if( partnum[0].value == "3" || partnum[0].value == "4" ){
 				for (i = 0; i < partnum.length; i++) {
 					num_str += partnum[i].value;
 				}
