--- a/index.html
+++ b/index.html
@@ -976,6 +976,7 @@
 		
 		// send product data
 		function send_product_data( part_attr, product_num_str, state ){
+			alert( product_num_str );
 			if( check_part_num( 0, 15, product_num_str ) ) {
 				var attr = get_doc_part_attr( part_attr );
 				if (attr !== false){
