--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							<br><label for="part_remark_in">備註 : </label>
 							<br><textarea id="part_remark_in" class="part_attr normal_font" name="part_remark" rows="5" cols="50" wrap="hard" ></textarea>
 							<br><div id="add_product_toolbar">
-								<button type="button" class="btn btn-primary" onclick='append_btn_res()' >新增料件</button>
+								<button type="button" class="btn btn-primary" onclick='append_btn_res()' >新增表單</button>
 								<button type="button" class="btn btn-primary" onclick='send_new_product()' >資料上傳</button>
 								<br><label for="part_totalcost_out">總成本 :</label><input type=text id="part_totalcost_out" class="part_attr input_container normal_font" style="width:200px;margin-top:15px" name="part_totalcost" disabled="true" value="0" >
 							</div>
