--- a/index.html
+++ b/index.html
@@ -317,11 +317,14 @@
 			
 			// tab response
 		    $('.nav-tabs a').on('shown.bs.tab', function(event){
+				var tab_obj = new tab_assign();
 				tab_page_name = $(event.target).attr('href');   // active tab
 				switch( tab_page_name ){
 					case "#home":
 						product_table = $("#part_table"); 
 						ele_id = "home";
+						tab_obj.set_table_id( $("#part_table") );
+						tab_obj.set_ele_id( "home" );
 						break;
 					case "#menu1":
 						ele_id = "menu1";
@@ -347,6 +350,8 @@
 					case "#menu6":
 						product_table = $("#record_table");
 						ele_id = "menu6";
+						tab_obj.set_table_id( $("#record_table") );
+						tab_obj.set_ele_id( "menu6" );
 						receive_record();
 						break;
 					case "#menu7":
@@ -1077,7 +1082,7 @@
 		};
 
 		// google login event
-		function onSuccess(googleUser){
+		function onSuccess( googleUser ){
 			user_email = googleUser.getBasicProfile().getEmail();
 			user_id = user_email.substring( 0, user_email.indexOf("@") );
 			user_name = googleUser.getBasicProfile().getName();
@@ -1096,8 +1101,9 @@
 		// receive data for database
 		async function receive_to_db( data ){
 			data.id = user_id;
+			var tab_obj = new tab_assign();
 			try{
-				var response = await receive_promise( product_table, ele_id, data );
+				var response = await receive_promise( tab_obj.get_table_id(), tab_obj.get_ele_id(), data );
 				if( response == true ){
 					return true;
 				}
@@ -1133,6 +1139,7 @@
 		}
 		
     </script>
+	<script type="text/javascript" src="/scripts/package_tab_assign.js"></script>
 	<script type="text/javascript" src="/scripts/db_receive.js"></script>
 	<script type="text/javascript" src="/scripts/db_send.js"></script>
 	<script type="text/javascript" src="/scripts/get.js"></script>
