--- a/index.html
+++ b/index.html
@@ -295,7 +295,10 @@
 		var supplier_list_options = "";
 		var tab_page_name = "";
 		var bom_node_array = new Array();
-
+		var tab_obj = new tab_assign();
+		tab_obj.set_table_id( $("#part_table") );
+		tab_obj.set_ele_id( "home" );
+		
 		
 		function set_table_font(row, index) {
 		  return {
@@ -317,7 +320,6 @@
 			
 			// tab response
 		    $('.nav-tabs a').on('shown.bs.tab', function(event){
-				var tab_obj = new tab_assign();
 				tab_page_name = $(event.target).attr('href');   // active tab
 				switch( tab_page_name ){
 					case "#home":
@@ -325,8 +327,6 @@
 						ele_id = "home";
 						tab_obj.set_table_id( $("#part_table") );
 						tab_obj.set_ele_id( "home" );
-						alert( tab_obj.get_table_id() );
-						alert( tab_obj.get_ele_id() );
 						break;
 					case "#menu1":
 						ele_id = "menu1";
@@ -1104,7 +1104,7 @@
 		async function receive_to_db( data ){
 			data.id = user_id;
 			try{
-				var response = await receive_promise( product_table, ele_id, data );
+				var response = await receive_promise( tab_obj.get_table_id(), tab_obj.get_ele_id(), data );
 				if( response == true ){
 					return true;
 				}
